# foxconn-oem-ipmi

./: CMakeLists.txt  README.md  oe-logs  oe-workdir
include/: fanctrlcommands.hpp  systemcommands.hpp  utils.hpp
src/: fanctrlcommands.cpp  systemcommands.cpp  utils.cpp
